--- a/.ssh/config
+++ b/.ssh/config
@@ -2,19 +2,49 @@
 #	HostName 94.74.127.49
 #	User pj
 
-Host hk1
+# 万人同服测试
+Host hk2
 	HostName  119.8.35.144
 	User pj
 
-Host hk2
+# 安装了edgecore,但CCE集群被删除了，暂时空闲
+Host hk1
 	HostName  159.138.44.120
 	User pj
 
+
+# 广州节点的个人开发机器
+Host gz1-pub
+	HostName  124.71.15.57
+	User pj
+
+# 广州节点的个人开发机器，局域网地址
 Host gz1
-	HostName  192.168.0.9
+	HostName 172.16.0.212
+	User pj
+
+# 北京4的gpu环境, lsq
+Host bj0
+	HostName 119.3.231.31
 	User pj
 
 Host git@github.com
 	HostName github.com
 	User jaypume
 	IdentityFile ~/.ssh/id_rsa
+
+# siqi在用的单机sedna环境，暂时不用这个
+Host sgp-gpu
+	HostName 94.74.91.114
+	User pj
+
+# roboartisan邀测广州region，被KubeEdge纳管的云上GPU节点
+Host sgp-gpu229
+	HostName 49.0.206.229
+	User pj
+
+
+# roboartisan邀测广州region，租户侧cce/kubeedge环境（部门账号）
+Host gz-robo01
+	HostName 116.205.167.229
+	User root
