--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,5 +79,5 @@ set-window-option -g clock-mode-colour green #green
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmu
 
