update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -33,16 +33,10 @@ Host git@github.com
 	User jaypume
 	IdentityFile ~/.ssh/id_rsa
 
-# siqi在用的单机sedna环境，暂时不用这个
-Host sgp-gpu
-	HostName 94.74.91.114
+# 有两块T4卡的机器
+Host hk-gpu
+	HostName 119.12.161.183
 	User pj
-
-# roboartisan邀测广州region，被KubeEdge纳管的云上GPU节点
-Host sgp-gpu229
-	HostName 49.0.206.229
-	User pj
-
 
 # roboartisan邀测广州region，租户侧cce/kubeedge环境（部门账号）
 Host gz-robo01
