--- a/.ssh/config
+++ b/.ssh/config
@@ -38,7 +38,26 @@ Host hk-gpu
 	HostName 119.12.161.183
 	User pj
 
+Host hk-t4
+	HostName 119.8.112.152
+	User pj
+
+Host bz-v100
+	HostName 119.8.111.84
+	Port 3322
+	User pj
+
+Host bz-zj
+	HostName 119.8.111.84
+	Port 2222
+	User pj
+
+
 # roboartisan邀测广州region，租户侧cce/kubeedge环境（部门账号）
 Host gz-robo01
 	HostName 116.205.167.229
+	User root
+
+Host gz-robo02
+	HostName 124.71.11.226
 	User root
